frontend/test/should_fail/rhs_008.grg
rule r {
	x:Node;
	
	modify {
		y:Node<x>;
		delete(x);
	}
}